keycloak/keycloak/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
    release: keycloak
    role: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
      release: keycloak
      role: web
  template:
    metadata:
      labels:
        app: keycloak
        release: keycloak
        role: web
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:21.1.1
        args: ["start", "--optimized"]
        resources:
          requests:
            cpu: 250m
            memory: 300Mi
          limits:
            cpu: 350m
            memory: 600Mi
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /realms/master
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 10
          failureThreshold: 5
          timeoutSeconds: 5
        volumeMounts:
          - name: keycloak-data
            mountPath: /opt/keycloak
          - name: keycloak-helper-scripts
            mountPath: /opt/scripts
      volumes:
        - name: keycloak-data
          emptyDir: {}
        - name: keycloak-helper-scripts
          configMap:
            name: keycloak-helper-scripts
